# DDALAB

./: .dockerignore  .env.dev  .env.example  .env.local  .env.production.example  .envrc.example  .eslintrc.json  .gitignore  .gitmodules  .pre-commit-config.yaml  ANNOTATION_SYNC_IMPLEMENTATION.md  CLAUDE.md  CONTRIBUTING.md  DDALAB_CONTROL_MIGRATION.md  DDA_DEMO_README.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.api  Dockerfile.e2e  Dockerfile.isolated-dev  GEMINI.md  PERSISTENT_PLOTS.md  PLANNED_FEATURES.md  PLOT_CACHING.md  README.md  README_TESTS.md  ROADMAP.md  TEST_FIXING_PLAN.md  TODO.md  VOLUMES.md  acme.json  api-contract.md  build-nsg-binaries.sh  bun.lockb  cleanup.sh  clear_plot_cache.js  compressed_section.tex  dda_py_demo.py  dda_py_simple_demo.py  deploy-ddalab.sh  (+43 more)
.circleci/: config.yml
.claude/: settings.local.json
.config/: celery.json  data.json  redis.json  server.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-python-package.yml  build-qt.yml  codeql.yml  conformance.yml  docker-api.yml  docker-build.yml  docs.yml  release-desktop.yml  release.yml  sync-broker.yml  test.yml
config/: README.md  custom-example.yml  default.yml  setup-env-links.sh
config/environments/: README.md  base.env  db-setup.env  ddalab-web.env  local.env  server-scripts.env
conformance/: dda_conformance_contract.json
data/: no_header_data.csv  no_header_measurements.ascii  sensor_data.ascii  test_timeseries.csv
ddalab-deploy/: .env.example  README.md  docker-compose.yml
ddalab-signup/: .dockerignore  Dockerfile  README.md  actions.ts  docker-compose.yml  fonts.ts  package-lock.json  package.json  sign-up-form.tsx  tailwind.config.ts
ddalab-signup/app/: layout.tsx  page.tsx
ddalab-signup/db/: schema.sql
ddalab-signup/lib/: rate-limit.ts
ddalab-signup/types/: pg.d.ts
ddalab-web/: .env.example  Dockerfile  README.md  jest.config.js  jest.setup.js  middleware.ts  next.config.mjs  package-lock.json  package.json  server.js  server.ts  tailwind.config.js  tsconfig.json  v0-user-next.config.js
ddalab-web/.config/: server.json  setup-env-links.sh
ddalab-web/app/: globals.css  layout.tsx  page.tsx
ddalab-web/components/: annotation-editor.tsx  apollo-wrapper.tsx  dashboard-tabs.tsx  dda-form.tsx  dda-heatmap-new.tsx  dda-heatmap.tsx  dda-plot.tsx  edf-navigator.tsx  edf-plot-dialog.tsx  eeg-chart.tsx  eeg-dashboard.tsx  eeg-zoom-settings.tsx  file-browser.tsx  file-selector.tsx  footer.tsx  header.tsx  help-button.tsx  login-form.tsx  mode-toggle.tsx  protected-route.tsx  providers.tsx  register-dialog.tsx  results-form.tsx  save-settings-button.tsx  session-expiration-settings.tsx  task-status.tsx  theme-initializer.tsx  theme-provider.tsx  theme-settings.tsx  toast-test.tsx  unsaved-changes-alert.tsx  user-settings.tsx
ddalab-web/contexts/: auth-context.tsx  edf-plot-context.tsx  settings-context.tsx
ddalab-web/coverage/: clover.xml  lcov.info  (+1 more)
deploy/: auto-update.sh  deploy.sh  monitor.sh
diagrams/: architecture.d2  architecture_diagram.py
directus/: docker-compose.yml  setup_directus.py
docs/: CONFIGMANAGER_DEPLOYMENT.md  DEPLOYMENT.md  DEVELOPMENT_SETUP.md  DEV_MODES.md  DIAGRAM_README.md  DOCKER_CONFIG.md  DOCKER_DEV.md  DOCKER_WORKFLOW.md  ISOLATED_DEV_ENVIRONMENT.md  RELEASE_GUIDE.md  SSL_CERTIFICATES.md  TROUBLESHOOTING.md  architecture_diagram.mmd  architecture_diagram.tex  architecture_simple.tex  build_diagram.sh  index.html  plugin-system-design.md
dynamic/: routers.dev.yml  routers.prod.yml  tls.yml
examples/: model_encoding_demo.py
installer/: main.ts  package-lock.json  package.json  preload.ts  tsconfig.json
nginx-proxy/: docker-compose.yml  nginx.conf
nsg_wrapper/: dda.py  run_dda_nsg.py
scripts/: README.md  build-and-release.sh  build-docker-images.bat  build-docker-images.sh  check-python-env.sh  check-setup.sh  check-ssl-status.sh  circleci-follow.sh  circleci-quick-test.sh  circleci-test-local.sh  circleci-test-safe.sh  config-validator.js  dev-configmanager.bat  dev-configmanager.sh  dev-containers.sh  dev-isolated.sh  dev-local.sh  dev-minimal.sh  dev.sh  docker-profiles.sh  generate-certs.sh  local-test.sh  release-current-platform.sh  run-conformance-suite.sh  setup-dev-env.sh  setup-dev.sh  setup-python-env.sh  start-api-only.sh  start-core-services.sh  stop-containers.sh  sync-packages.sh  test-api-docker.sh  test-docker-build.sh  test-docker-config.sh  trigger-circleci-with-logs.sh  trigger-circleci-workflow.sh  trigger-circleci.sh  update-minio.sh
server/: .env.dev  .env.example  Dockerfile  README.md  __init__.py  apply_sql_files.py  celery_app.py  config.py  main.py  old-env  requirements.txt  signup_handler.py  start.sh
signup/: README.md  package-lock.json  package.json
test_data/: sample.ascii  sample.csv
tests/: README.md  __init__.py  conftest.py
(+249 files in other folders)
