[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--strict-markers"
markers = [
	"integration: marks tests as integration tests",
	"realintegration: marks tests that need real external services (like Directus)",
]

[tool.coverage.run]
source = ["ddalab", "server"]
omit = ["tests/*", "**/__pycache__/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
	"pragma: no cover",
	"def __repr__",
	"raise NotImplementedError",
	"if __name__ == .__main__.:",
	"pass",
	"raise ImportError",
]
