[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.3",
    "asyncpg>=0.30.0",
    "click>=8.1.8",
    "cryptography>=41.0.0",
    "dda-py>=0.1.4",
    "email-validator>=2.0.0",
    "fastapi>=0.68.0",
    "gql>=3.4.1",
    "greenlet>=3.2.2",
    "gunicorn>=23.0.0",
    "httpx>=0.24.0",
    "loguru>=0.5.3",
    "matplotlib>=3.0.0",
    "minio>=7.2.15",
    "mne>=1.6.0",
    "numpy>=1.26.0",
    "opentelemetry-api>=0.53b0",
    "opentelemetry-exporter-otlp-proto-http>=1.32.0",
    "opentelemetry-instrumentation>=0.53b0",
    "opentelemetry-instrumentation-fastapi>=0.53b0",
    "opentelemetry-sdk>=1.32.0",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=3.5.0",
    "prometheus-client>=0.21.1",
    "psycopg2-binary>=2.9.5",
    "pydantic>=1.8.0",
    "pydantic-settings>=2.0.0",
    "pyedflib>=0.1.36",
    "pyhumps>=3.8.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.5",
    "requests>=2.32.3",
    "requests-mock>=1.11.0",
    "requests-toolbelt>=1.0.0",
    "ruff>=0.1.6",
    "sqlalchemy>=1.4.0",
    "strawberry-graphql>=0.96.0",
    "uvicorn>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--strict-markers"
markers = [
	"integration: marks tests as integration tests",
	"realintegration: marks tests that need real external services (like Directus)",
]

[tool.coverage.run]
source = ["ddalab", "server"]
omit = ["tests/*", "**/__pycache__/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
	"pragma: no cover",
	"def __repr__",
	"raise NotImplementedError",
	"if __name__ == .__main__.:",
	"pass",
	"raise ImportError",
]
